aligned header labels and subtotal in cart corrected button label on order complete page

--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
 .header {
   display: flex;
   width: 100%;
-  background: #182fb3;
+  background: #2239bb;
   height: 4em;
   text-align: left;
   justify-items: center;
@@ -42,18 +42,8 @@
 }
 .header-name {
   margin-left: 2em;
+  font-size: 20px;
 
-}
-
-.nav {
-  display: inline-block;
-  margin: .5em 5em 1em 1em;
-  color: #f5f5f5;
-}
-nav ul {
-  display: inline-block;
-  list-style: none;
-  padding: 0;
 }
 
 ul {
@@ -63,25 +53,40 @@ ul {
 a {
   text-decoration: none;
     color: white;
+    margin: 0;
   }
 
 .cart-table-head {
+  width: 100%;
   display: inline-flex;
-  justify-content: space-evenly;
+  align-items: baseline;
+  justify-items: left;
+  /* justify-content: space-evenly; */
 
   color: gray;
 }
 .your-cart {
   display: inline-block;
   width: 100px;
+  margin: 0 300px 0 100px;
+  font-size: 24px;
 
 }
 .qty-price {
-  /* display: inline-block; */
+  display: inline-block;
+  margin: 0 50px 0 0;
 
 }
 .item-container {
   display: block;
+}
+.subtotal {
+  display: inline-flex;
+  float: right;
+  margin: 1em 5em 1em 5em;
+}
+.subtotal-total {
+  margin-left: 5em;
 }
 .item-row {
   display: inline-flex;
@@ -115,11 +120,30 @@ a {
 }
 .form-container{
   display: inline-flex;
+  flex-direction: row;
   justify-content: space-evenly;
 }
 .payment-form {
-  max-width: 40%;
+  display: flex;
+  flex-direction: column;
+  max-width: 60%;
 }
 .shipping-form {
+  display: flex;
+  flex-direction: column;
   max-width: 40%;
+}
+.button {
+  display: block;
+  float: right;
+  margin: 3em;
+}
+label {
+  display: flex;
+  flex-direction: column;
+  float: left;
+  text-align: right;
+  width: 10em;
+  margin-right: 1em;
+  margin-top: 0.4em;
 }
